# e2

./: Cargo.toml  br.sh  flake.nix
src/: atomic.rs  dents.rs  email.rs  main.rs
